@@ -6,8 +6,11 @@ import com.festago.auth.domain.SocialType;
 import com.festago.fcm.domain.MemberFCM;
 import com.festago.member.domain.Member;
 import com.festago.member.repository.MemberRepository;
+import com.festago.support.MemberFcmFixture;
 import com.festago.support.MemberFixture;
+import java.util.Collections;
 import java.util.List;
+import org.junit.jupiter.api.Nested;
 import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.autoconfigure.orm.jpa.DataJpaTest;
@@ -26,7 +29,7 @@ class MemberFCMRepositoryTest {
         // given
         Member member = memberRepository.save(new Member("socialId", SocialType.FESTAGO, "nickname", "image.jpg"));
         Long memberId = member.getId();
-        MemberFCM expect = memberFCMRepository.save(new MemberFCM(memberId, "fcmToken"));
+        MemberFCM expect = memberFCMRepository.save(MemberFcmFixture.memberFcm().memberId(memberId).build());
 
         // when
         List<MemberFCM> actual = memberFCMRepository.findByMemberId(memberId);
@@ -35,22 +38,36 @@ class MemberFCMRepositoryTest {
         assertThat(actual).contains(expect);
     }
 
-    @Test
-    void memberId리스트로_MemberFcm을_찾을_수_있다() {
-        // given
-        Member member1 = memberRepository.save(MemberFixture.member().build());
-        Member member2 = memberRepository.save(MemberFixture.member().build());
-        Member member3 = memberRepository.save(MemberFixture.member().build());
-        MemberFCM token1 = memberFCMRepository.save(new MemberFCM(member1.getId(), "token1"));
-        MemberFCM token2 = memberFCMRepository.save(new MemberFCM(member1.getId(), "token2"));
-        MemberFCM token3 = memberFCMRepository.save(new MemberFCM(member2.getId(), "token3"));
-        MemberFCM token4 = memberFCMRepository.save(new MemberFCM(member3.getId(), "token4"));
+    @Nested
+    class memberId리스트로_token리스트_조회 {
 
-        // when
-        List<MemberFCM> actual = memberFCMRepository.findAllByMemberIdIn(
-            List.of(member1.getId(), member2.getId()));
+        @Test
+        void 빈리스트면_빈리스트반환() {
+            // given
+            List<String> actual = memberFCMRepository.findAllTokenByMemberIdIn(Collections.emptyList());
 
-        // then
-        assertThat(actual).containsExactlyInAnyOrder(token1, token2, token3);
+            // then
+            assertThat(actual).isEmpty();
+        }
+
+        @Test
+        void 성공적으로_조회() {
+            // given
+            Member member1 = memberRepository.save(MemberFixture.member().build());
+            Member member2 = memberRepository.save(MemberFixture.member().build());
+            Member member3 = memberRepository.save(MemberFixture.member().build());
+
+            MemberFCM fcm1 = memberFCMRepository.save(MemberFcmFixture.memberFcm().memberId(member1.getId()).build());
+            MemberFCM fcm2 = memberFCMRepository.save(MemberFcmFixture.memberFcm().memberId(member1.getId()).build());
+            MemberFCM fcm3 = memberFCMRepository.save(MemberFcmFixture.memberFcm().memberId(member2.getId()).build());
+            MemberFCM fcm4 = memberFCMRepository.save(MemberFcmFixture.memberFcm().memberId(member3.getId()).build());
+
+            // when
+            List<String> actual = memberFCMRepository.findAllTokenByMemberIdIn(
+                List.of(member1.getId(), member2.getId()));
+
+            // then
+            assertThat(actual).containsExactlyInAnyOrder(fcm1.getFcmToken(), fcm2.getFcmToken(), fcm3.getFcmToken());
+        }
     }
 }
